Change to the characters view to fix a bug, where in dark mode the letters would stay black

--- a/src/app/characters/characters.page.scss
+++ b/src/app/characters/characters.page.scss
@@ -3,7 +3,7 @@
     align-items: center;
     gap: 10px;
     width: 100%;
-    color: black;
+    // color: black;
     cursor: pointer;
     border-left: 1px black solid;
     border-bottom: 1px black solid;
